Fixed page overlapping routing issue

--- a/ReactJS/parking-spot-finder/src/components/Profile/Profile.css
+++ b/ReactJS/parking-spot-finder/src/components/Profile/Profile.css
@@ -1,8 +1,14 @@
 .profile-container {
   display: flex;
   padding: 10px;
+  flex-direction: row;
 }
 .profile-container.h3 {
   padding: 5px;
   align-content: center;
+}
+
+.name-img-container {
+  display: flex;
+  flex-direction: column;
 }
